# Qwen2.5-VL-3B-Instruct-FineTune

./: .gitignore  pyproject.toml  requirements.txt  setup.py
configs/vlm_training/: qwen25_vl_3b.yaml
data/configs/: eval_transforms.yaml  pipeline.yaml  sources.yaml  taxonomy.yaml  train_transforms.yaml
evaluations/: __init__.py
evaluations/validations/: __init__.py  data.py  dataset_integrity.py  dataset_validation.py  io.py  metrics.py  prediction_metrics.py
inference/: .env.example  __init__.py  api_requirements.txt  extract_old_keys.py  run_api.py  test_old_key.py  test_pyjwt.py
inference/api/: .env.example  __init__.py  config.py  dependencies.py  main.py
inference/config/: inference.yaml
inference/scripts/: reorganize_model_package.py  simulate_inference_pipeline.py
inference/src/: __init__.py
qwen2.5-vl-disease-lora/: .gitattributes  README.md
qwen2.5-vl-disease-lora/inference/: adapter_config.json  adapter_model.safetensors  processor_config.json  tokenizer_config.json
qwen2.5-vl-disease-lora/training_artifacts/: final_metrics.csv  memory_telemetry.jsonl  resolved_training_config.yaml  run_metadata.json  runtime_plan.json  training_metrics.csv  training_metrics.jsonl
scripts/dataset_pipeline/: _bootstrap.py  analyze_dataset.py  build_manifest.py  create_splits.py  curate_dataset.py  deduplicate.py  download_sources.py  export_dataset_card.py  export_vlm_sft.py  package_dataset.py  run_full_pipeline.py  scan_raw_data.py  validate_dataset.py
scripts/vlm_training/: prepare_dataset.py  prepare_runtime.py
src/dataset_pipeline/: __init__.py  (+1 more)
(+98 files in other folders)
