[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "krishivaidya-model"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.7.0",
  "bitsandbytes>=0.43.3",
  "datasets>=3.0.0",
  "fastapi>=0.115.0",
  "hydra-core>=1.3.2",
  "huggingface-hub>=0.31.0",
  "httpx>=0.28.0",
  "matplotlib",
  "omegaconf>=2.3.0",
  "pandas>=2.0.0",
  "peft>=0.17.1",
  "pillow>=10.0.0",
  "pydantic-settings>=2.0.0",
  "PyJWT>=2.10.0",
  "psutil>=5.9.0",
  "pyyaml>=6.0.0",
  "qwen-vl-utils[decord]>=0.0.8",
  "slowapi>=0.1.9",
  "tensorboard>=2.16.0",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "tqdm",
  "transformers>=4.57.0",
  "trl>=0.24.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
krishivaidya-inference-api = "inference.api.main:main"

[project.optional-dependencies]
dev = [
  "pytest",
]
tunnel = [
  "pyngrok>=7.1.0",
]

[tool.setuptools.package-data]
"inference.api" = [".env.example", "deploy/README.md", "deploy/systemd/*.service", "scripts/*.sh"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
